Added a bare bones html serving server.

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,8 +5,21 @@
   <artifactId>server</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>server</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <name>server</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -21,7 +34,12 @@
       <artifactId>guava</artifactId>
       <version>19.0</version>
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/org.webbitserver/webbit -->
+    <dependency>
+      <groupId>org.webbitserver</groupId>
+      <artifactId>webbit</artifactId>
+      <version>0.4.15</version>
+    </dependency>
 
   </dependencies>
 </project>
