--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
     <groupId>soze.multilife</groupId>
     <artifactId>server</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
     <build>
         <plugins>
             <plugin>
@@ -15,7 +15,24 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>soze.multilife.MultiLife</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+
+
         </plugins>
+
+
     </build>
     <name>server</name>
     <url>http://maven.apache.org</url>
