--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-1": "^6.22.0",
+    "copy-webpack-plugin": "^4.0.1",
     "webpack": "^2.3.2"
   },
   "dependencies": {
