--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,6 +1,13 @@
 {
   "presets": [
-    ["es2015", {"modules": false}],
-    ["stage-1"]
+    [
+      "es2015",
+      {
+        "modules": false
+      }
+    ],
+    [
+      "stage-1"
+    ]
   ]
 }
