Added a MetricsRepository interface, implemented by MongoMetricsRepository. Uses mongoDB to save metrics data

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -46,9 +46,8 @@
 
 
         </plugins>
-
-
     </build>
+
     <name>server</name>
     <url>http://maven.apache.org</url>
 
@@ -103,6 +102,12 @@
             <version>1.7.24</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.4.2</version>
+        </dependency>
 
     </dependencies>
 </project>
