--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,16 @@
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.22.0",
     "copy-webpack-plugin": "^4.0.1",
     "webpack": "^2.3.2"
   },
   "dependencies": {
-    "p5": "^0.5.8"
+    "material-ui": "^0.17.4",
+    "p5": "^0.5.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-tap-event-plugin": "^2.0.1"
   }
 }
