--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.22.0",
     "copy-webpack-plugin": "^4.0.1",
+    "file-loader": "0.10.0",
     "webpack": "^2.3.2"
   },
   "dependencies": {
