--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>server</artifactId>
     <packaging>jar</packaging>
     <version>0.1</version>
+
     <build>
         <plugins>
             <plugin>
@@ -44,6 +45,18 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>2.20</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
 
         </plugins>
     </build>
